--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h3>健康小學堂</h3>
             <div class="row">
               <div class="col-md-4 text-center">
-                <img src="bryan.jpg">
+                <img src="bryan.jpg" width="600">
                 <h5>小編Bryan</h5>
               </div>
               <div class="col-md-8 text-left">
@@ -154,7 +154,7 @@
                <div class='outer'>
                  <a href='#'>
                    <div class='upper'>
-                   <img src='SOHOT.jpg'>
+                   <img src='SOHOT.jpg' width="500">
                    </div>
                    <div class='lower'>
                      <h3>最致命的燒燙傷 </h3>
@@ -171,7 +171,7 @@
                  <div class='outer'>
                    <a href='single.html'>
                      <div class='upper'>
-                     <img src="hot.jpg">
+                     <img src="hot.jpg" width="500">
                      </div>
                      <div class='lower'>
                        <h3>意外情況處理課程</h3>
@@ -188,7 +188,7 @@
                  <div class='outer'>
                    <a href='#'>
                      <div class='upper'>
-                     <img src='light.jpg'>
+                     <img src='light.jpg' width="500">
                      </div>
                      <div class='lower'>
                        <h3>較少遇到的燒燙傷</h3>
