--- a/index (2).html
+++ b/index (2).html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <meta name="description"  content="遇到傷燙傷不要緊張，記住沖脫泡蓋送"/>
+    <meta name="description"  content="吃到沒煮熟的食物，你可能已經食物中毒"/>
     <meta name="author" content="Bryan"/>
     <meta name="keywords" content="緊急狀況,燒上湯怎麼辦,燒燙傷"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
@@ -19,7 +19,7 @@
       
     </style>
 
-    <title>緊急狀況該怎麼辦?這招自救!</title>
+    <title>不是拉拉肚子就好！出現5種情況快就醫 bryan健康小學堂</title>
     
 </head>
 <body>
@@ -36,10 +36,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">主頁</a>
+                <a class="nav-link active" aria-current="page" href="index.html">主頁</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">食物中毒</a>
+                <a class="nav-link" href="index (2).html">食物中毒</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -76,9 +76,9 @@
                 <h5>小編Bryan</h5>
               </div>
               <div class="col-md-8 text-left">
-                <p class="lead">遇到意外是在所難免的</p>
-                <p>但你必須知道所有緊急情況的處理方法</p>
-                <p>為了保護自己跟身邊的人</p>
+                <p class="lead">什麼是食物中毒？</p>
+                <p>當食物發生食物變質腐敗，有的時候外觀看起來或是嘗起來無異狀，但其實裡面可能早就細菌滿滿了。</p>
+                <p>腹瀉、嘔吐、腹痛……食物中毒已找上你！                </p>
                 <p>就讓Bryan帶你們了解處理方法吧！</p>
               </div>
             </div>
@@ -89,36 +89,50 @@
         <div class="contianer-fluid bg-light p-5">
         <div class="contianer">
             <div class="col-md-12">
-                <h1 display-4>遇到緊急情況造成的燒燙傷不知道怎麼處理?</h1>
+                <h1 display-4>遇到緊急情況造成的食物中毒不知道怎麼處理?</h1>
                 <p class="lead">我來告訴你該怎麼做!</p>
                 <a class="btn btn-primary btn-lg" href="#" role="button">跟我來</a>
             </div>
         </div>
       </section>
-      <h3 class="title"><i class="icon-bullhorn"></i>燒燙傷怎麼辦？快沖冷水最重要！<br>燒燙傷急救無偏方　正確處理「沖、脫、泡、蓋、送」</h3>
+      <h3 class="title"><i class="icon-bullhorn"></i>食物中毒不自知?<br>看看自己有沒有以下症狀</h3>
       <iframe src="https://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.chimei.org.tw%2Fmain%2Fcmh_department%2F59012%2Fmagazin%2Fvol129%2F05-4.html&width=110&amp;layout=button_count&amp;action=like&amp;size=small&amp;show_faces=true&amp;share=true&amp;height=46&amp;appId" width="110" height="46" style="border:none;overflow:hidden;float:right;" scrolling="no" frameborder="0" allowtransparency="true"></iframe>
       <ul class="unstyled inline blog-tags list-of-authors">
         <li><i class="icon-pencil"></i> By&nbsp;網上蒐集的資料　Bryan</li>
       </ul>
+<!--細菌介紹-->
+      <div class="T03">食物中毒的症狀可能從輕度到非常嚴重，依據吞下不同的細菌，症狀可能有所不同，一般食物中毒的最常見症狀是：胃部不適、胃痙攣、噁心、嘔吐、腹瀉、發熱。吃下受污染的食物或飲料後，可能會數小時或數天才會出現食物中毒的症狀，如果有上述食物中毒的症狀，初期記得多喝水以防止脫水，若是出現5種危急情況，一定要盡快就醫。</div>
+  <!--圖片插入-->
+  
+    </br>
+    </br>
+      <div class="T05">5種食物中毒危急症狀</div>
+      <div class="T05">弧菌</div>
+      <div class="T03">攝入後2~48小時開始出現症狀：水樣腹瀉、噁心、胃痙攣、嘔吐、發燒發冷。
 
-      <div class="T03">烹煮美食或是享用熱騰騰的美食過程中，燒燙傷怎麼辦？要用阿嬤的偏方，趕快在傷口上塗醬油、漿糊、蛋白？或用網路鄉民傳說中的黑人牙膏、白藥膏、小護士、神奇紫草膏、凡士林等塗抹傷口？還是聽媽媽的話，泡鹽水、冰敷？以上這些偏方沒有相關的實證依據，誤用而延遲就醫可能會引起傷口感染的問題。</div>
-  <div class="T05">燒燙傷種類</div>
-      <div class="T03">傷害來源有關，常見的燒燙傷種類，包括：溫度性燒燙傷、化學性燒燙傷、電燒燙傷，被火源或是熱液燒燙傷的情況，屬於「溫度性燒燙傷。燒燙傷所造成的組織傷害程度，取決於組織接觸的熱源溫度高低和接觸時間長短。</div>
-      <div class="T03">皮膚一旦接觸40~44℃以上熱源時，皮膚或皮下組織的蛋白質會產生變性，蛋白質的結構因此受到破壞。當暴露在45℃達1小時，細胞膜就會被破壞；熱源溫度大於60℃，接觸時間只要3~5秒，接觸部位的組織蛋白質就會凝固、細胞會壞死。</div>
-      <div class="T02">燒燙傷依皮膚受傷深度，可分為ㄧ度、淺二度、深二度、三度、四度：</div>
-  <div class="T05">ㄧ度燒燙傷</div>
-      <div class="T03">傷及範圍為表皮層，皮膚出現紅腫、疼痛的現象，無水泡產生。</div>
-  <div class="T05">淺二度燒燙傷</div>
-      <div class="T03">傷及部分真皮層，皮膚紅腫、長水泡、劇烈疼痛和灼熱感。</div>
-  <div class="T05">深二度燒燙傷</div>
-      <div class="T03">傷及真皮深層，皮膚呈現淺紅色並長出白色大水泡，此期較無疼痛感。</div>
-  <div class="T05">三度燒燙傷</div>
-      <div class="T03">傷及全層皮膚，呈現白色或乾硬的皮革狀。</div>
-  <div class="T05">四度燒燙傷</div>
-      <div class="T03">損傷範圍為全皮層，且傷及皮下脂肪、肌肉和骨骼。</div>
-      <div class="T03">一旦發生燒燙傷，不論傷口大小或嚴重程度，最重要的是「立刻沖冷水，讓皮膚快速溫和地降溫，在冷水下沖15~30 分鐘，可避免高溫持續停留在皮膚上，造成更嚴重的傷害。但切記勿以冰敷的方式來降溫，因為燒燙傷的皮膚組織較為敏感，反而容易發生凍傷。</div>
-      <div class="T03">網路上建議的牙膏、白藥膏、小護士、神奇紫草膏、凡士林等，此類膏狀產品覆蓋於皮膚上，反而會將「熱度」包覆住，減緩皮膚降溫的速度。加上這些物質黏著度較高，附著在燙傷傷口上較不易清除，換藥時反而容易感到疼痛。鹽水具有吸熱和高滲透壓的特性，可達到降溫效果，人體皮膚於受損狀態下，其預防水分流失的保護功能會喪失，這時如果浸泡鹽水或使用鹽水沖洗，反而容易因高滲透壓而導致體液流失。</div>
-      <div class="T02">一旦不慎發生燒燙傷時，最正確的處理口訣為「沖、脫、泡、蓋、送」</div>
+        </div>
+  <div class="T03">常見的食物中毒來源：生的或未煮熟的貝類，尤其是牡蠣</div>
+      <div class="T05">沙門氏菌</div>
+  <div class="T03">攝入後6小時~6天開始出現症狀：腹瀉、發燒、胃痙攣、嘔吐</div>
+      <div class="T03">常見的食物中毒來源：生或未煮熟的雞肉和肉、雞蛋、未經巴氏消毒的牛奶和果汁、未加工的水果和蔬菜</div>
+  <div class="T05">肉毒桿菌</div>
+      <div class="T03">攝入後18~36小時開始出現症狀：視力加倍或模糊、眼瞼下垂、言語含糊、吞嚥和呼吸困難、口乾、肌肉無力和麻痺，症狀一般從頭部開始，隨著病情加重而向下進展。</div>
+  <div class="T03">常見的食物中毒來源：罐裝或自製的發酵食物</div>
+      <div class="T03"></div>
+  <div class="T05">金黃色葡萄球菌</div>
+      <div class="T03">攝入後30分鐘~8小時開始出現症狀：噁心、嘔吐、胃痙攣、腹瀉。
+
+        </div>
+      <div class="T03">
+
+        常見的食物中毒來源：處理後未煮熟的食物（例如：切成薄片的肉）、布丁、糕點、三明治</div>
+      <div class="T03">大腸桿菌</div>
+      <div class="T03">攝入後3~4天開始出現症狀：嚴重的胃痙攣、腹瀉（出血性）、嘔吐。約有5~10％的人會出現威脅生命的健康問題。
+
+        常見的食物中毒來源：生或未煮熟的絞細牛肉、未經巴氏殺菌的牛奶和果汁、生菜、被汙染的水</div>
+      <div class="T02">預防新冠入口，只要勤洗手!</div>
+      </hr>
+      <div class="T02">五個症狀來判斷是否食物中毒</div>
   <div class="blog-img">
     <ul class="thumbnails">
     <li class="span6">
@@ -128,7 +142,9 @@
         <div class="zoom-icon"></div>					
       </div>												
       </a>
-      <span>沖：在冷水下沖15~30分鐘</span>
+      <span>1. 出血性腹瀉
+
+      </span>
     </li>
     <li class="span6">
       <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="燒燙傷怎麼辦？快沖冷水最重要！　燒燙傷急救無偏方　正確處理「沖、脫、泡、蓋、送」" href="assets/img/05/4-2.png">
@@ -137,7 +153,9 @@
         <div class="zoom-icon"></div>					
       </div>												
       </a>
-      <span>脫：輕輕脫掉覆蓋傷口的衣物</span>
+      <span>2. 高燒（溫度超過39.5℃）
+
+      </span>
     </li>
     </ul><!--/thumbnails-->	
    <ul class="thumbnails">
@@ -148,7 +166,7 @@
         <div class="zoom-icon"></div>					
       </div>												
       </a>
-      <span>泡：如果有燒焦的衣物黏在皮膚上必須去除，建議須泡在水中15分鐘再小心去除衣物殘骸。</span>
+      <span>3. 持續嘔吐，無法攝取水份（將可能導致脫水）</span>
     </li>
     <li class="span6">
       <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="燒燙傷怎麼辦？快沖冷水最重要！　燒燙傷急救無偏方　正確處理「沖、脫、泡、蓋、送」" href="assets/img/05/4-4.png">
@@ -157,7 +175,7 @@
         <div class="zoom-icon"></div>					
       </div>												
       </a>
-      <span>蓋：傷口蓋上無菌紗布或乾淨毛巾。</span>
+      <span>4. 出現脫水跡象：包括排尿很少或沒有排尿、口腔和喉嚨非常乾燥、站立時感到頭暈</span>
     </li>
     </ul><!--/thumbnails-->	
     <ul class="thumbnails">
@@ -168,12 +186,12 @@
         <div class="zoom-icon"></div>					
       </div>												
       </a>
-      <span>送：注意保暖盡快送醫治療。</span>
+      <span>5. 腹瀉持續超過3天</span>
     </li>
     </ul><!--/thumbnails-->
       </div>
-       <div class="T03">燒燙傷傷口治療的原則為清潔及保護傷口，防止傷口感染及促進傷口癒合。拜醫療科技之進步，現行燒燙傷傷口後續照護方式及敷料的選擇，也有很多舒適有效的選擇，但必須經醫師診療後，依傷口的嚴重程度決定。淺二度燙傷傷口，大多有水泡，處理時須以消毒過的器具戳破水泡，保持皮膚的完整性，再使用醫師處方的藥膏或是合適的現代敷料，例如：親水性膠體敷料(俗稱人工皮)、親水性纖維敷料等，只要妥善處理，大多可於1~2週內完全恢復。較嚴重的深二度及三度以上傷口，可能須由醫師依傷口狀況進行傷口清創，甚至植皮手術治療。</div>
-  <div class="T03">燒燙傷不怕，可怕的是誤用偏方不當處理傷口，若是傷口處理不當、癒合不佳又延誤治療，嚴重可能導致敗血症發生，危及生命！因此，燒燙傷急救沒偏方，快沖冷水最重要！</div>
+       <div class="T03">嚴重的食物中毒需要住院治療，因食物中毒可能引發慢性關節炎、腦和神經損傷、溶血性尿毒症綜合徵（HUS）引起的腎衰竭</div>
+  <div class="T03">若輕忽食物中毒恐導致死亡。</div>
       <p></p>
     </div><!--/blog-->
   </div><!--/span8-->
@@ -203,14 +221,14 @@
                <div class='outer'>
                  <a href='#'>
                    <div class='upper'>
-                   <img src='SOHOT.jpg' width="500">
+                   <img src='https://pgw.udn.com.tw/gw/photo.php?u=https://uc.udn.com.tw/photo/2021/12/08/realtime/14724075.png&x=0&y=0&sw=0&sh=0&sl=W&fw=800&exp=3600&w=800&nt=1' >
                    </div>
                    <div class='lower'>
-                     <h3>最致命的燒燙傷 </h3>
-                     <span>可選擇</span>
-                     <h4>電擊燒燙傷</h4>
-                     <span><i class="fas fa-map-marker-alt"></i> 美國加州</span><br>
-                     <span><i class="far fa-clock"></i> Jun 08, 2022 </span>
+                     <h3>宜蘭師生集體食物中毒調查出爐 糙米被金黃葡萄球菌汙染</h3>
+                     <span>學校團膳集體中毒</span>
+                     <h4>金黃色葡萄球菌</h4>
+                     <span><i class="fas fa-map-marker-alt"></i> 宜蘭</span><br>
+                     <span><i class="far fa-clock"></i> 2021-12-08 </span>
                    </div>
                  </a>
                </div>
@@ -220,14 +238,14 @@
                  <div class='outer'>
                    <a href='single.html'>
                      <div class='upper'>
-                     <img src="hot.jpg" width="500">
+                     <img src="https://images.chinatimes.com/newsphoto/2021-12-15/1024/20211215003543.jpg" >
                      </div>
                      <div class='lower'>
-                       <h3>最常見的大面積傷燙傷</h3>
-                       <span>可選擇</span>
-                       <h4>鞭炮燒燙傷</h4>
-                       <span><i class="fas fa-map-marker-alt"></i> 嘉義媽祖繞境</span><br>
-                       <span><i class="far fa-clock"></i> set 25, 2015</span>
+                       <h3>台中驚傳14人食物中毒 東勢某便當店遭勒令停業 內部環境曝光</h3>
+                       <span>廚房作業環境不潔及冰箱生熟食未分開放置</span>
+                       <h4>多種病毒</h4>
+                       <span><i class="fas fa-map-marker-alt"></i> 台中東勢</span><br>
+                       <span><i class="far fa-clock"></i> 2021/12/15</span>
                      </div>
                    </a>
                  </div>
@@ -237,14 +255,14 @@
                  <div class='outer'>
                    <a href='#'>
                      <div class='upper'>
-                     <img src='light.jpg' width="500">
+                     <img src='https://pgw.udn.com.tw/gw/photo.php?u=https://uc.udn.com.tw/photo/2022/02/07/1/15836370.jpg&x=0&y=0&sw=0&sh=0&sl=W&fw=800&exp=3600&w=930&nt=1' >
                      </div>
                      <div class='lower'>
-                       <h3>較少遇到的燒燙傷</h3>
-                       <span>可選擇</span>
-                       <h4>輻射灼傷</h4>
-                       <span><i class="fas fa-map-marker-alt"></i> 日本東村</span><br>
-                       <span><i class="far fa-clock"></i>jun 25 2011 </span>
+                       <h3>疑似食物中毒 北市士林一幼兒園16幼童送醫</h3>
+                       <span>幼兒園團膳中毒</span>
+                       <h4>未知病毒</h4>
+                       <span><i class="fas fa-map-marker-alt"></i> 北市士林</span><br>
+                       <span><i class="far fa-clock"></i>2022-02-11 </span>
                      </div>
                    </a>
                  </div>
