--- a/index (2).html
+++ b/index (2).html
@@ -47,9 +47,9 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="#">野外有毒動物外傷</a></li>
-                  <li><a class="dropdown-item" href="#">工安意外處理</a></li>
+                  <li><a class="dropdown-item" href="#"></a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">凍傷處理</a></li>
+                  <li><a class="dropdown-item" href="#"></a></li>
                 </ul>
               </li>
               <li class="nav-item">
@@ -73,7 +73,7 @@
             <div class="row">
               <div class="col-md-4 text-center">
                 <img src="bryan.jpg" >
-                <h5>小編Bryan</h5>
+                <h5>小專家Bryan</h5>
               </div>
               <div class="col-md-8 text-left">
                 <p class="lead">什麼是食物中毒？</p>
