--- a/index.html
+++ b/index.html
@@ -36,20 +36,21 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">主頁</a>
+                <a class="nav-link active" aria-current="page" href="index.html">主頁</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">食物中毒</a>
+                <a class="nav-link" href="index (2).html">食物中毒</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   其他意外
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">野外有毒動物外傷</a></li>
-                  <li><a class="dropdown-item" href="#">工安意外處理</a></li>
+                  <li><a class="dropdown-item" href="index(3).html">野外有毒動物外傷</a></li>
+                  <li><a class="dropdown-item" href="#"></a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">凍傷處理</a></li>
+                  <li><a class="dropdown-item" href="#"></a></li>
+                  <!--上面留著捕先工安意外跟凍傷還有野外受傷-->
                 </ul>
               </li>
               <li class="nav-item">
@@ -73,7 +74,7 @@
             <div class="row">
               <div class="col-md-4 text-center">
                 <img src="bryan.jpg" >
-                <h5>小編Bryan</h5>
+                <h5>小專家Bryan</h5>
               </div>
               <div class="col-md-8 text-left">
                 <p class="lead">遇到意外是在所難免的</p>
@@ -201,16 +202,16 @@
             <div class='row'>
              <div class='col-md-4 text-left'>
                <div class='outer'>
-                 <a href='#'>
+                 <a href='https://tw.news.yahoo.com/ctwant-%E5%9C%8B%E9%9A%9B%E6%96%B0%E8%81%9E-%E7%94%B7%E5%AD%90%E5%8A%A0%E6%B2%B9%E7%AB%99%E9%81%AD%E8%AD%A6%E9%9B%BB%E6%93%8A-%E5%BC%95%E7%99%BC%E5%A4%A7%E7%88%86%E7%82%B8%E5%9A%B4%E9%87%8D%E7%87%92%E7%87%99%E5%82%B7-084902454.html'>
                    <div class='upper'>
                    <img src='SOHOT.jpg' width="500">
                    </div>
                    <div class='lower'>
                      <h3>最致命的燒燙傷 </h3>
-                     <span>可選擇</span>
+                     <span>燒傷面積75%</span>
                      <h4>電擊燒燙傷</h4>
                      <span><i class="fas fa-map-marker-alt"></i> 美國加州</span><br>
-                     <span><i class="far fa-clock"></i> Jun 08, 2022 </span>
+                     <span><i class="far fa-clock"></i> 05 19, 2022 </span>
                    </div>
                  </a>
                </div>
@@ -218,16 +219,16 @@
              <!--第二張相片-->
                <div class='col-md-4 text-left'>
                  <div class='outer'>
-                   <a href='single.html'>
+                   <a href='https://www.chinatimes.com/realtimenews/20210413002175-260402'>
                      <div class='upper'>
                      <img src="hot.jpg" width="500">
                      </div>
                      <div class='lower'>
                        <h3>最常見的大面積傷燙傷</h3>
-                       <span>可選擇</span>
+                       <span>背部大面積燒傷</span>
                        <h4>鞭炮燒燙傷</h4>
                        <span><i class="fas fa-map-marker-alt"></i> 嘉義媽祖繞境</span><br>
-                       <span><i class="far fa-clock"></i> set 25, 2015</span>
+                       <span><i class="far fa-clock"></i>  04,13, 2021</span>
                      </div>
                    </a>
                  </div>
@@ -235,16 +236,16 @@
              <!--第三張相片-->
                <div class='col-md-4 text-left'>
                  <div class='outer'>
-                   <a href='#'>
+                   <a href='https://www.hk01.com/%E7%86%B1%E7%88%86%E8%A9%B1%E9%A1%8C/630473/%E6%97%A5%E6%9C%AC%E6%9D%B1%E6%B5%B7%E6%9D%91%E6%A0%B8%E6%B3%84%E6%BC%8F-%E7%94%B7%E5%BB%A0%E5%B7%A5%E5%8F%97%E6%A0%B8%E8%BC%BB%E5%B0%84-83%E5%A4%A9%E5%85%A7%E6%80%A5%E9%80%9F%E6%BD%B0%E7%88%9B%E7%95%AB%E9%9D%A2%E6%A5%B5%E9%9C%87%E6%92%BC'>
                      <div class='upper'>
                      <img src='light.jpg' width="500">
                      </div>
                      <div class='lower'>
                        <h3>較少遇到的燒燙傷</h3>
-                       <span>可選擇</span>
+                       <span>輻射灼傷死亡案例</span>
                        <h4>輻射灼傷</h4>
                        <span><i class="fas fa-map-marker-alt"></i> 日本東村</span><br>
-                       <span><i class="far fa-clock"></i>jun 25 2011 </span>
+                       <span><i class="far fa-clock"></i>06 22 2021 </span>
                      </div>
                    </a>
                  </div>
@@ -287,7 +288,7 @@
            <h4>連結</h4>
            <ul>
                <li><a href='index.html'>主頁</a></li>
-               <li><a href='all.html'>相關問題</a></li>
+               <li><a href='#'>相關問題</a></li>
            </ul>
            <ul>
                <li><a href='#'>常見問題</a></li>
